--- a/style.css
+++ b/style.css
@@ -1,6 +1,197 @@
+:root {
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.6rem;
+    font-family: sans-serif;
+    background-color: hsl(226, 43%, 10%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 768px) {
+        font-size: 1.4rem;
+    }
+}
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "one two three four"
+    "one five six seven";
+    grid-gap: 1.6rem;
+    max-width: 116.0rem;
+    margin-bottom: 4.8rem;
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: .5fr .5fr .5fr .5fr .5fr .5fr .5fr;
+        grid-template-areas:
+        "one"
+        "two"
+        "three"
+        "four"
+        "five"
+        "six"
+        "seven";
+        max-width: 32.7rem;
+        margin: 4.8rem auto;
+    }
+}
+.container1 {
+    background-color: hsl(235, 46%, 20%);
+    grid-area: one;
+    border-radius: 12px;
+}
+.content1 {
+    background-color: hsl(246, 80%, 60%);
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    padding: 2.4rem;
+    line-height: 1;
+    @media screen and (max-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2.4rem 1.2rem;
+    }
+}
+.top1 {
+    margin: 3.6rem 0;
+    @media screen and (max-width: 768px) {
+        margin: 0 1rem;
+    }
+}
+.bottom1 li {
+    color: hsl(236, 100%, 87%);
+    list-style: none;
+    padding: .4rem 0;
+    @media screen and (max-width: 768px) {
+        display: inline;
+        padding: 0 2.2rem;
+    }
+}
+ul {
+    @media screen and (max-width: 768px) {
+        padding: 0;
+    }
+}
+.bottom1 li:hover {
+    color: hsl(0, 0%, 100%);
+    cursor: pointer;
+}
+.name {
+    font-size: 4.0rem;
+    font-family: 'Rubik';
+    font-weight: 100;
+    color: hsl(0, 0%, 100%);
+    margin-top: 1.0rem;
+    @media screen and (max-width: 768px) {
+        font-size: 2.5rem;
+        margin-top: 0;
+    }
+}
+.text {
+    color: hsl(236, 100%, 87%);
+}
+.img {
+    width: 7rem;
+    border: 2px solid hsl(0, 0%, 100%);
+    border-radius: 50%;
+    @media screen and (max-width: 768px) {
+        width: 5rem;
+    }
+}
+.container2 {
+    background-color: hsl(15, 100%, 70%);
+    grid-area: two;
+}
+.container3 {
+    background-color: hsl(195, 74%, 62%);
+    grid-area: three;
+}
+.container4 {
+    background-color: hsl(348, 100%, 68%);
+    grid-area: four;
+}
+.container5 {
+    background-color: hsl(145, 58%, 55%);
+    grid-area: five;
+}
+.container6 {
+    background-color: hsl(264, 64%, 52%);
+    grid-area: six;
+}
+.container7 {
+    background-color: hsl(43, 84%, 65%);
+    grid-area: seven;
+}
+.container {
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+}
+.logo {
+    width: 6rem;
+    height: 4rem;
+    align-self: flex-end;
+    object-fit: cover;
+}
+.content {
+    background-color: hsl(235, 46%, 20%);
+    border-radius: 12px;
+    padding: 2.4rem;
+    @media screen and (max-width: 768px) {
+        padding: 1.2rem;
+    }
+}
+.content:hover {
+    background-color: hsl(235, 45%, 61%);
+    cursor: pointer;
+}
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.0rem;
+    @media screen and (max-width: 768px) {
+        margin-bottom: 0;
+    }
+}
+.title {
+    font-size: 1.8rem;
+    color: hsl(0, 0%, 100%);
+    @media screen and (max-width: 768px) {
+        font-size: 1.6rem;
+    }
+}
+.bottom {
+    display: flex;
+    flex-direction: column;
+    @media screen and (max-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.current {
+    font-size: 4.0rem;
+    font-family: 'Rubik';
+    color: hsl(0, 0%, 100%);
+    @media screen and (max-width: 768px) {
+        font-size: 3rem;
+    }
+}
+.previous {
+    color: hsl(236, 100%, 87%);
+}
 .attribution {
-    font-size: 11px; text-align: center;
+    font-size: 1.1rem;
+    text-align: center;
+    color: hsl(0, 0%, 100%);
 }
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: hsl(32, 100%, 50%);
+    text-decoration: none;
 }
